fix gaps

--- a/src/ui/Textarea/style.module.scss
+++ b/src/ui/Textarea/style.module.scss
@@ -4,7 +4,7 @@
 .TextareaWrapper {
   position: relative;
   width: 100%;
-
+  margin-top: 8px;
   &.errorState {
     margin-bottom: 16px;
   }
